[package]
name = "url-parse-nginx"
version = "0.1.0"
edition = "2021"
description = "A faithful, 1-to-1 Rust port of nginx's URL path parser (ngx_http_parse_uri / ngx_http_parse_complex_uri) for origin-form paths."
license = "BSD-2-Clause"
readme = "README.md"
# repository = "https://github.com/<owner>/url-parse-nginx"  # set once the repo exists
keywords = ["nginx", "url", "uri", "path", "normalization"]
categories = ["parser-implementations", "web-programming"]
# Dev-only tooling (differential fuzzer and the C harness it builds) is not
# part of the published library.
exclude = ["difffuzz", "url-fuzz-harness"]

[lib]
name = "url_parse_nginx"
